--- a/templates/contrat_pret/index.html.twig
+++ b/templates/contrat_pret/index.html.twig
@@ -31,8 +31,8 @@
                 
                 
                 <td>
-                    <a href="{{ path('app_instrument_show', {'id': instrument.id}) }}">Consulter</a>
-                    <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">Modifier</a>
+                    <a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.id}) }}">Consulter</a>
+                    <a href="{{ path('app_contrat_pret_edit', {'id': contrat_pret.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
