--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link rel="icon" href="../public/img/logo/logo.jpg">
 
         {% block stylesheets %}
         <style> 
@@ -352,7 +352,7 @@ footer {
           
       <div class="navbar">
       <div class="navbar1">
-      <a href="{{ path('app_accueil') }}"><img src="../templates/img/logo.jpg" alt="Logo" width="170" height="170"></a>
+      <a href="{{ path('app_accueil') }}"><img src="../public/img/logo/logo.jpg" alt="Logo" width="170" height="170"></a>
     
       </div>
       <nav>
