--- a/templates/cours/index.html.twig
+++ b/templates/cours/index.html.twig
@@ -30,7 +30,7 @@
                 <td>{{ cour.ageMaxi }}</td>
                 <td>{{ cour.dateCours}}</td>
                 <td>
-                    <a href="{{ path('app_cours_show', {'id': cour.id}) }}">Voir</a> |
+                    <a href="{{ path('app_cours_show', {'id': cour.id}) }}">Consulter</a> |
                     <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">Modifier</a>
                 </td>
             </tr>
