--- a/templates/cours/index.html.twig
+++ b/templates/cours/index.html.twig
@@ -30,8 +30,13 @@
                 <td>{{ cour.ageMaxi }}</td>
                 <td>{{ cour.dateCours}}</td>
                 <td>
-                    <a href="{{ path('app_cours_show', {'id': cour.id}) }}">Consulter</a> |
+                    <a href="{{ path('app_cours_show', {'id': cour.id}) }}">Consulter</a> 
+                    
+                    {% if is_granted('ROLE_ADMIN') %}
                     <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">Modifier</a>
+                    {% else %}
+                    {% endif %}
+                    
                 </td>
             </tr>
         {% else %}
