--- a/templates/maintenance/index.html.twig
+++ b/templates/maintenance/index.html.twig
@@ -31,7 +31,12 @@
                 <td>{{ intervention.professionnel.nom }}</td>
                 <td>
                     <a href="{{ path('app_intervention_show', {'id': intervention.id}) }}">Consulter</a>
-                    <a href="{{ path('app_intervention_edit', {'id': intervention.id}) }}">Modifier</a>
+                    
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('app_intervention_edit', {'id': intervention.id}) }}">Modifier</a>                   
+                    {% else %}
+                    {% endif %}
+                    
                 </td>
             </tr>
         {% else %}
