--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -268,6 +268,7 @@ button:hover, a:hover {
   }
 }
 footer {
+  margin-top: auto;
   background-color: var(--color-surface);
   box-shadow: var(--shadow);
   padding: 2rem 1.5rem;
@@ -392,6 +393,10 @@ footer {
         </nav>
         <br>
           <a href="{{ path('app_login') }}">✅Connexion</a>
+        {% if is_granted('ROLE_ADMIN') %}
+          <a href="{{ path('app_user_index') }}">Gestion Utilisateurs</a>
+          {% else %}
+          {% endif %}
       </div>
     
     
@@ -412,7 +417,7 @@ footer {
       <div class="footer-social">
       <h3>Suivez-nous</h3>
       <a href="#" aria-label="Facebook">Facebook</a>
-      <a href="#" aria-label="Twitter">Twitter</a>
+      <a href="https://x.com/Doigby" aria-label="Twitter">Twitter</a>
       <a href="#" aria-label="LinkedIn">LinkedIn</a>
       
     </div>
