--- a/templates/cours/show.html.twig
+++ b/templates/cours/show.html.twig
@@ -79,7 +79,11 @@
 
     <a href="{{ path('app_cours_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">Modifier</a>
-
-    {{ include('cours/_delete_form.html.twig') }}
+    
+    {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">Modifier</a>
+                    {{ include('cours/_delete_form.html.twig') }}
+                    {% else %}
+                    {% endif %}
+    
 {% endblock %}
