--- a/templates/eleves/show.html.twig
+++ b/templates/eleves/show.html.twig
@@ -26,9 +26,13 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_eleves_index') }}">back to list</a>
+    <a href="{{ path('app_eleves_index') }}">Revenir à la Liste</a>
+    {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('app_eleves_edit', {'id': elefe.id}) }}">Modifier</a>    
+                    {{ include('eleves/_delete_form.html.twig') }}                
+                    {% else %}
+                    {% endif %}
+    
 
-    <a href="{{ path('app_eleves_edit', {'id': elefe.id}) }}">edit</a>
-
-    {{ include('eleves/_delete_form.html.twig') }}
+    
 {% endblock %}
