--- a/templates/instrument/index.html.twig
+++ b/templates/instrument/index.html.twig
@@ -32,7 +32,12 @@
                 <td><a href="{{ path('app_contrat_pret_show', {'id': instrument.id}) }}"/>Contrat</td>
                 <td>
                     <a href="{{ path('app_instrument_show', {'id': instrument.id}) }}">Consulter</a>
-                    <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">Modifier</a>
+                    
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">Modifier</a>                    
+                    {% else %}
+                    {% endif %}
+                    
                 </td>
             </tr>
         {% else %}
