--- a/templates/instrument/show.html.twig
+++ b/templates/instrument/show.html.twig
@@ -112,8 +112,10 @@
     <a href="{{ path('app_instrument_index') }}">Retour à la liste</a>
 </button>
     <br>
-<button class="btn">
-    <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">Modifier</a>
-</button>
-    {{ include('instrument/_delete_form.html.twig') }}
+{% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">Modifier</a>
+                    {{ include('instrument/_delete_form.html.twig') }}                    
+                    {% else %}
+                    {% endif %}
+    
 {% endblock %}
