--- a/templates/intervention/index.html.twig
+++ b/templates/intervention/index.html.twig
@@ -30,7 +30,12 @@
                 <td><a href="{{ path('app_intervention_show', {'id': intervention.professionnel.id}) }}">{{ intervention.professionnel.nom }}</a></td>
                 <td>
                     <a href="{{ path('app_intervention_show', {'id': intervention.id}) }}">Consulter</a>
-                    <a href="{{ path('app_intervention_edit', {'id': intervention.id}) }}">Modifier</a>
+
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('app_intervention_edit', {'id': intervention.id}) }}">Modifier</a>                    
+                    {% else %}
+                    {% endif %}
+                    
                 </td>
             </tr>
         {% else %}
