--- a/templates/intervention/show.html.twig
+++ b/templates/intervention/show.html.twig
@@ -38,9 +38,13 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_intervention_index') }}">back to list</a>
+    <a href="{{ path('app_intervention_index') }}">Revenir à la Liste</a>
 
-    <a href="{{ path('app_intervention_edit', {'id': intervention.id}) }}">edit</a>
+    {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('app_intervention_edit', {'id': intervention.id}) }}">Modifier</a>
+                    {{ include('intervention/_delete_form.html.twig') }}                    
+                    {% else %}
+                    {% endif %}
 
-    {{ include('intervention/_delete_form.html.twig') }}
+    
 {% endblock %}
