--- a/templates/professeur/show.html.twig
+++ b/templates/professeur/show.html.twig
@@ -46,9 +46,13 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_professeur_index') }}">back to list</a>
+    <a href="{{ path('app_professeur_index') }}">Revenir à la liste</a>
 
-    <a href="{{ path('app_professeur_edit', {'id': professeur.id}) }}">edit</a>
+    {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('app_professeur_edit', {'id': professeur.id}) }}">Modifier</a>
+                    {{ include('professeur/_delete_form.html.twig') }}                
+                    {% else %}
+                    {% endif %}
 
-    {{ include('professeur/_delete_form.html.twig') }}
+    
 {% endblock %}
