--- a/templates/contrat_pret/show.html.twig
+++ b/templates/contrat_pret/show.html.twig
@@ -40,7 +40,7 @@
 
     <a href="{{ path('app_contrat_pret_index') }}">Revenir à la Liste</a>
     
-    {% if is_granted('ROLE_ADMIN') %}
+    {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_GESTION') %}
     <a href="{{ path('app_contrat_pret_edit', {'id': contrat_pret.id}) }}">Modifier</a>
     {{ include('contrat_pret/_delete_form.html.twig') }}
     {% else %}
