--- a/templates/cours/show.html.twig
+++ b/templates/cours/show.html.twig
@@ -80,7 +80,7 @@
     <a href="{{ path('app_cours_index') }}">Retour à la liste</a>
 
     
-    {% if is_granted('ROLE_ADMIN') %}
+    {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_GESTION') %}
                     <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">Modifier</a>
                     {{ include('cours/_delete_form.html.twig') }}
                     {% else %}
