--- a/templates/eleves/show.html.twig
+++ b/templates/eleves/show.html.twig
@@ -27,7 +27,7 @@
     </table>
 
     <a href="{{ path('app_eleves_index') }}">Revenir à la Liste</a>
-    {% if is_granted('ROLE_ADMIN') %}
+    {% if is_granted('ROLE_ADMIN')or is_granted('ROLE_GESTION') %}
                     <a href="{{ path('app_eleves_edit', {'id': elefe.id}) }}">Modifier</a>    
                     {{ include('eleves/_delete_form.html.twig') }}                
                     {% else %}
