--- a/templates/instrument/show.html.twig
+++ b/templates/instrument/show.html.twig
@@ -112,7 +112,7 @@
     <a href="{{ path('app_instrument_index') }}">Retour à la liste</a>
 </button>
     <br>
-{% if is_granted('ROLE_ADMIN') %}
+{% if is_granted('ROLE_ADMIN') or is_granted('ROLE_GESTION') %}
                     <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">Modifier</a>
                     {{ include('instrument/_delete_form.html.twig') }}                    
                     {% else %}
