--- a/templates/intervention/show.html.twig
+++ b/templates/intervention/show.html.twig
@@ -40,7 +40,7 @@
 
     <a href="{{ path('app_intervention_index') }}">Revenir à la Liste</a>
 
-    {% if is_granted('ROLE_ADMIN') %}
+    {% if is_granted('ROLE_ADMIN')or is_granted('ROLE_GESTION') %}
                     <a href="{{ path('app_intervention_edit', {'id': intervention.id}) }}">Modifier</a>
                     {{ include('intervention/_delete_form.html.twig') }}                    
                     {% else %}
