--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -438,16 +438,7 @@ footer {
       <p>© 2025 Tous droits réservés</p>
     </div>
 
-    <!-- Navigation rapide -->
-    <div class="footer-nav">
-      <div class="footer-social">
-      <h3>Suivez-nous</h3>
-      <a href="#" aria-label="Facebook">Facebook</a>
-      <a href="https://x.com/Doigby" aria-label="Twitter">Twitter</a>
-      <a href="#" aria-label="LinkedIn">LinkedIn</a>
-      
-    </div>
-    </div>
+    
     
 
     <!-- Informations légales / RGPD -->
@@ -461,15 +452,15 @@ footer {
     </div>
 
     <!-- Navigation rapide -->
-        <div class="footer-nav">
-          <div class="footer-social">
-          <h3>Suivez-nous</h3>
-          <a href="#" aria-label="Facebook">Facebook</a>
-          <a href="#" aria-label="Twitter">Twitter</a>
-          <a href="#" aria-label="LinkedIn">LinkedIn</a>
-        </div>
-        </div>
-
+    <div class="footer-nav">
+      <div class="footer-social">
+      <h3>Suivez-nous</h3>
+      <a href="https://www.youtube.com/watch?v=u4ecB57jFhI&list=RDu4ecB57jFhI&start_radio=1" aria-label="Facebook">Facebook</a>
+      <a href="https://x.com/Doigby" aria-label="Twitter">Twitter</a>
+      <a href="https://www.youtube.com/watch?v=7xtagPvAQrY" aria-label="LinkedIn">LinkedIn</a>
+      
+    </div>
+    </div>
   </div>
 </footer>
   </body>
