--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -408,14 +408,27 @@ footer {
         <br>
           <a href="{{ path('app_cours_index') }}">📖Cours</a>
         <br>
+        
+        {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_GESTION') %}
         <br>
           <a href="{{ path('app_intervention_index') }}">🔧Interventions</a>
-        <br>
+          <br>
+        
+          {% else  %}
+          {% endif %}
+          
         <br>
           <a href="{{ path('app_professeur_index') }}">🧑‍🏫Professeurs</a>
         <br>
+
+                {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_GESTION')%}
         <br>
           <a href="{{ path('app_contrat_pret_index') }}">📝Contrats Prêts</a>
+          <br>
+        
+          {% else  %}
+          {% endif %}
+
         </nav>
         
           <a href="{{ path('app_login') }}">✅Connexion</a>
@@ -438,16 +451,6 @@ footer {
       <p>© 2025 Tous droits réservés</p>
     </div>
 
-    <!-- Navigation rapide -->
-    <div class="footer-nav">
-      <div class="footer-social">
-      <h3>Suivez-nous</h3>
-      <a href="#" aria-label="Facebook">Facebook</a>
-      <a href="https://x.com/Doigby" aria-label="Twitter">Twitter</a>
-      <a href="#" aria-label="LinkedIn">LinkedIn</a>
-      
-    </div>
-    </div>
     
 
     <!-- Informations légales / RGPD -->
@@ -460,13 +463,13 @@ footer {
       </ul>
     </div>
 
-    <!-- Navigation rapide -->
-        <div class="footer-nav">
-          <div class="footer-social">
-          <h3>Suivez-nous</h3>
-          <a href="#" aria-label="Facebook">Facebook</a>
-          <a href="#" aria-label="Twitter">Twitter</a>
-          <a href="#" aria-label="LinkedIn">LinkedIn</a>
+   <!-- Navigation rapide -->
+    <div class="footer-nav">
+      <div class="footer-social">
+      <h3>Suivez-nous</h3>
+      <a href="https://www.youtube.com/watch?v=u4ecB57jFhI&list=RDu4ecB57jFhI&start_radio=1" aria-label="Facebook">Facebook</a>
+      <a href="https://x.com/Doigby" aria-label="Twitter">Twitter</a>
+      <a href="https://www.youtube.com/watch?v=7xtagPvAQrY" aria-label="LinkedIn">LinkedIn</a>
         </div>
         </div>
 
