--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -432,6 +432,7 @@ footer {
         </nav>
         
           <a href="{{ path('app_login') }}">✅Connexion</a>
+          <a href="{{ path('app_register') }}">📝Inscription</a>
         {% if is_granted('ROLE_ADMIN') %}
           <a href="{{ path('app_user_index') }}">Gestion Utilisateurs</a>
           {% else  %}
