--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -462,6 +462,7 @@ footer {
         <li><a href="{{ path('app_politique_conf') }}">Politique de confidentialité</a></li>
         <li><a href="{{ path('app_cookie') }}">Politique des cookies</a></li>
         <li><a href="{{ path('app_droit') }}">Exercice de vos droits RGPD</a></li>
+        <li><a href="{{ path('app_conditions') }}">Conditions d'utilisation</a></li>
       </ul>
     </div>
 
