--- a/templates/compte/index.html.twig
+++ b/templates/compte/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Mon Compte</h1>
 
     <table class="table">
         <tbody>
@@ -27,17 +27,13 @@
     </table>
 
     
-    {% if is_granted('ROLE_ADMIN')%}
-        <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
 
-    {{ include('user/_delete_form.html.twig') }}
-        
-          {% else  %}
-          {% endif %}
     
-        <a href="{{ path('app_user_index') }}">back to list</a>
-        
-             
+        <a href="{{ path('app_accueil') }}">back to index</a>
+        <br>
+       <a href="{{ path('app_logout') }}" class="btn btn-lg btn-danger">
+        Se déconnecter
+        </a>      
     
 <br>
     
