--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,12 +14,12 @@
 
     
 
-    <h1 class="h3 mb-3 font-weight-normal">Connection :</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Connexion :</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-    <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+    <input type="hidden" name="_csrf_token" data-controller="csrf-sprotection" value="{{ csrf_token('authenticate') }}">
 
     <button class="btn btn-lg btn-primary" type="submit">
         Connexion
