--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,16 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Utilisateur{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Utilisateur</h1>
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
             <tr>
                 <th>Email</th>
                 <td>{{ user.email }}</td>
@@ -28,15 +24,14 @@
 
     
     {% if is_granted('ROLE_ADMIN')%}
-        <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+        <a href="{{ path('app_user_edit', {'id': user.id}) }}">Modifier</a>
 
     {{ include('user/_delete_form.html.twig') }}
         
           {% else  %}
           {% endif %}
     
-        <a href="{{ path('app_user_index') }}">back to list</a>
-        
+        <a href="{{ path('app_user_index') }}">Retour à la liste</a>
              
     
 <br>
