--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -473,7 +473,7 @@ footer {
       <ul>
         <li><a href="{{ path('app_politique_conf') }}">Politique de confidentialité</a></li>
         <li><a href="{{ path('app_cookie') }}">Politique des cookies</a></li>
-        <li><a href="{{ path('app_droit') }}">Exercice de vos droits RGPD</a></li>
+        <li><a href="{{ path('app_droit') }}">Exercer vos droits RGPD</a></li>
         <li><a href="{{ path('app_conditions') }}">Conditions d'utilisation</a></li>
       </ul>
     </div>
