--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Créer un compte{% endblock %}ç_ih
+{% block title %}Créer un compte{% endblock %}
 
 {% block body %}
 <div class="min-h-screen bg-gradient-to-br from-blue-50 to-blue-100 flex items-center justify-center p-4">
@@ -101,4 +101,12 @@
         </div>
     </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 {% endblock %}
