--- a/templates/eleves/show.html.twig
+++ b/templates/eleves/show.html.twig
@@ -25,31 +25,73 @@
             </tr>
         </tbody>
     </table>
+
     <br>
-    <table>
-        <tr>
-            <th style="text-align:center; vertical-align:middle;">Cours Inscrits</th>
-        </tr>
-    <tr>
-            <td style="text-align:center; vertical-align:middle;">
+    <table class="table">
+        <tbody>
+            <tr>
+                <th>Cours Inscrits</th>
+                <th>Jour</th>
+                <th>Heure Début</th>
+                <th>Heure Fin</th>
+                <th>Professeur</th>
+            </tr>
             {% if elefe.cours is defined and elefe.cours|length %}
                 {% for cour in elefe.cours %}
-                <a href="{{ path('app_cours_show', {'id': cour.id}) }}">{{ cour.libelle }}</a>{% if not loop.last %} | {% endif %}
+                    <tr>
+                        <td><a href="{{ path('app_cours_show', {'id': cour.id}) }}">{{ cour.libelle }}</a></td>
+                        <td><a href="{{ path('app_cours_show', {'id': cour.id}) }}">{{ cour.dateCours }}</a></td>
+                        <td>{{ cour.heureDebut|date('H:i') }}</td>
+                        <td>{{ cour.heureFin|date('H:i') }}</td>
+                        <td><a href="{{ path('app_professeur_show', {'id': cour.professeur.id}) }}">{{ cour.professeur.nom }}</a></td>
+                    </tr>
                 {% endfor %}
             {% elseif elefe.inscriptions is defined and elefe.inscriptions|length %}
                 {% for insc in elefe.inscriptions %}
-                {% if insc.cours is defined %}
-                    <a href="{{ path('app_cours_show', {'id': insc.cours.id}) }}">{{ insc.cours.libelle }}</a>
-                {% elseif insc.cour is defined %}
-                    <a href="{{ path('app_cours_show', {'id': insc.cour.id}) }}">{{ insc.cour.libelle }}</a>
-                {% endif %}
-                {% if not loop.last %} | {% endif %}
+                    <tr>
+                        <td>
+                            {% if insc.cours is defined %}
+                                <a href="{{ path('app_cours_show', {'id': insc.cours.id}) }}">{{ insc.cours.libelle }}</a>
+                            {% elseif insc.cour is defined %}
+                                <a href="{{ path('app_cours_show', {'id': insc.cour.id}) }}">{{ insc.cour.libelle }}</a>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if insc.cours is defined %}
+                                {{ insc.cours.dateCours }}
+                            {% elseif insc.cour is defined %}
+                                {{ insc.cour.dateCours }}
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if insc.cours is defined %}
+                                {{ insc.cours.heureDebut|date('H:i') }}
+                            {% elseif insc.cour is defined %}
+                                {{ insc.cour.heureDebut|date('H:i') }}
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if insc.cours is defined %}
+                                {{ insc.cours.heureFin|date('H:i') }}
+                            {% elseif insc.cour is defined %}
+                                {{ insc.cour.heureFin|date('H:i') }}
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if insc.cours is defined %}
+                                <a href="{{ path('app_professeur_show', {'id': insc.cours.professeur.id}) }}">{{ insc.cours.professeur.nom }}</a>
+                            {% elseif insc.cour is defined %}
+                                <a href="{{ path('app_professeur_show', {'id': insc.cour.professeur.id}) }}">{{ insc.cour.professeur.nom }}</a>
+                            {% endif %}
+                        </td>
+                    </tr>
                 {% endfor %}
             {% else %}
-                Aucun cours
+                <tr>
+                    <td colspan="5">Aucun cours</td>
+                </tr>
             {% endif %}
-            </td>
-        </tr>
+        </tbody>
     </table>
 
     <a href="{{ path('app_eleves_index') }}">Revenir à la Liste</a>
