--- a/templates/eleves/_delete_form.html.twig
+++ b/templates/eleves/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_eleves_delete', {'id': elefe.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_eleves_delete', {'id': elefe.id}) }}" onsubmit="return confirm('Vous êtes sûr de vouloir supprimer cet élève?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ elefe.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Supprimer</button>
 </form>
