Liste des eleves de chaque cours affichage du logo sur les page consulter

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -389,7 +389,9 @@ footer {
           
       <div class="navbar">
       <div class="navbar1">
-      <a href="{{ path('app_accueil') }}"><img src="../public/img/logo/logo.jpg" alt="Logo" width="170" height="170"></a>
+      
+      <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/logo/logo.jpg') }}" alt="Logo" width="170" height="170"></a>
+
     
       </div>
       <nav>
